--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true,
+		"noImplicitAny": false // added so error/warning: Parameter 'xxx' implicitly has an 'any' type is removed.
+
+		/* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
