--- a/package.json
+++ b/package.json
@@ -208,5 +208,9 @@
     "vscode-uri": "^3.0.0",
     "yaml": "^2.2.0",
 		"@vscode/codicons": "0.0.20"
+  },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/nokia/vcode-workflow-manager.git"
   }
 }
