Fixed Bug and added switching between NSP servers

--- a/package.json
+++ b/package.json
@@ -125,6 +125,12 @@
     },
     "commands": [
       {
+        "command": "nokia-wfm.setServer",
+        "category": "WFM",
+        "title": "Set Server",
+        "icon": "$(list-unordered)"
+      },
+      {
         "command": "nokia-wfm.execute",
         "category": "WFM",
         "title": "Execute Workflow",
