--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nokia-wfm",
   "displayName": "NOKIA_WFM",
-  "description": "NOKIA WFM vsCode Developer Plugin",
+  "description": "NOKIA WFM VsCode Developer Plugin",
   "version": "2.0.1",
   "icon": "media/Nokia_WFM.png",
   "publisher": "Nokia",
@@ -47,7 +47,7 @@
         },
         "workflowManager.port":{
           "type": "string",
-          "default": "8546",
+          "default": "443",
           "scope": "application",
           "description": "NSP WFM port."
         },
