minor changes to logging and stat error checking and default username

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         },
         "workflowManager.user": {
           "type": "string",
-          "default": "username",
+          "default": "admin",
           "scope": "window",
           "description": "NSP username"
         },
