--- a/package.json
+++ b/package.json
@@ -130,11 +130,6 @@
           "when": "resourceLangId == yaml && resource =~ /^(?!.*wfm:\\/actions\\/).*$/",
           "command": "nokia-wfm.runBestPractices",
           "group": "navigation"
-        },
-        {
-          "when": "resourceLangId == yaml && resource =~ /^(?!.*wfm:\\/actions\\/).*$/",
-          "command": "nokia-wfm.clearProblems",
-          "group": "navigation"
         }
       ],
       "editor/context": [
@@ -142,6 +137,13 @@
           "command": "nokia-wfm.yaqalator",
           "group": "WFM",
           "when": "editorLangId == yaml && editorHasSelection"
+        }
+      ],
+      "explorer/context":[
+        {
+          "command": "nokia-wfm.clearProblems",
+          "group": "WFM",
+          "when": "(resourceLangId == yaml) && resource =~ /^(?!.*wfm:\\/actions\\/).*$/ && explorerResourceIsFolder"
         }
       ]
     },
@@ -161,8 +163,7 @@
       {
         "command": "nokia-wfm.applySchema",
         "category": "WFM",
-        "title": "Apply Schema for Validation",
-        "icon": "$(clear-all)"
+        "title": "Apply Schema for Validation"
       },
       {
         "command": "workbench.files.action.compareWithSaved",
